[metadata]
name = pyciemss
version = 0.1.0

license = BSD-3-Clause
license_files = LICENSE

[options]
install_requires =
    jupyter
    torch >= 1.8.0
    mira @ git+https://github.com/indralab/mira.git@0.2.1
    chirho[dynamical] == 0.2.0
    sympytorch
    torchdiffeq
    pandas
    numpy

zip_safe = false
include_package_data = true
python_requires = >=3.8

packages = 
    pyciemss
    pyciemss.integration_utils
    pyciemss.mira_integration

[options.package_data]
* = *.json


[options.extras_require]
tests =
    pytest
    pytest-xdist
    flake8
    black
    isort
    mypy
    types-requests
    nbval
    
[flake8]
max-line-length = 120
exclude = docs, build, dist, .ipynb_checkpoints, .env
extend-ignore = E203

[isort]
profile = black
skip_glob = .ipynb_checkpoints, .env
known_first_party = pyciemss, test
known_third_party = torch, pyro

[mypy]
ignore_missing_imports = True

[mypy-test.models.*]
ignore_errors = True
