[metadata]
name = pyciemss
version = 0.1.1

license = BSD-3-Clause
license_files = LICENSE

[options]
install_requires =
    jupyter
    torch >= 1.8.0
    mira @ git+https://github.com/indralab/mira.git@0.3.0
    chirho[dynamical] == 0.2.0
    sympytorch
    torchdiffeq
    pandas
    numpy
    vl-convert-python
    pytest
    matplotlib
    statsmodels
    netCDF4 
    dask

zip_safe = false
include_package_data = true
python_requires = >=3.8

packages = 
    pyciemss
    pyciemss.integration_utils
    pyciemss.mira_integration
    pyciemss.ensemble

[options.package_data]
* = *.json


[options.extras_require]
tests =
    pytest
    pytest-xdist
    flake8
    black
    isort
    mypy
    types-requests
    nbval
    xmldiff
    askem_model_representations@git+https://github.com/DARPA-ASKEM/Model-Representations@ModelInventory_v0.2

[flake8]
max-line-length = 120
exclude = docs, build, dist, .ipynb_checkpoints, .env
extend-ignore = E203

[isort]
profile = black
skip_glob = .ipynb_checkpoints, .env
known_first_party = pyciemss, test
known_third_party = torch, pyro

[mypy]
ignore_missing_imports = True
